syntax = "proto3";

import "Dto/Item.proto";
import "Item/PlayerShopItem.proto";

package ItemProto;

message CommitRetrievedRequest {
	int32 ownerId = 1;
}

message CommitRetrievedResponse {
	bool isSuccess = 1;;
}

message RemoteHiredMerchantDto {
	int32 ownerId = 1;
	string title = 2;
	int32 channel = 3;
	int32 mapId = 4;
	repeated Dto.ItemDto items = 5;
	int32 meso = 6;
}

message GetPlayerHiredMerchantRequest {
	int32 masterId = 1;
}

message SyncPlayerShopRequest {
	int32 ownerId = 1;
	string title = 2;
	int32 channel = 3;
	int32 mapId = 4;
	repeated PlayerShopItemDto items = 5;
	int32 meso = 6;
	int32 type = 7;
	int32 operation = 8;
}

message BatchSyncPlayerShopRequest {
	repeated SyncPlayerShopRequest list = 1;
}

message NotifyItemPurchasedResponse {
	int32 ownerId = 1;
	int32 itemId = 2;
	int32 quantity = 3;
	int32 gainedMeso = 4;
	int32 left = 5;
}

message NotifyPlayerHiredMerchantResponse {
	int32 ownerId = 1;
	int32 status = 2;
}

message CanHiredMerchantRequest {
	int32 masterId = 1;
}

message CanHiredMerchantResponse {
	int32 code = 1;
}